golang/k8s/sample-golang.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-golang
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-golang
  name: sample-golang
  namespace: sample-golang
spec:
  replicas: 6
  selector:
    matchLabels:
      app: sample-golang
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: "100%"
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: sample-golang
    spec:
      nodeSelector:
        workload: appcontainers
      volumes:
      - name: p12file
        secret:
          secretName: p12file
      containers:
      - image: docker.io/esantoro/dp-sample-go:latest
        workingDir: "/app"
        name: dp-sample-go
        resources:
          limits:
            cpu: "100m"
            memory: "64Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          httpGet:
            port: 8080
            path: "/alive"
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 3
          httpGet:
            port: 8080
            path: "/ready"
        volumeMounts:
        - name: p12file
          subPath: p12
          mountPath: /app/file.p12
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-golang
  name: sample-golang
  namespace: sample-golang
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30002
  selector:
    app: sample-golang
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-golang
  namespace: sample-golang
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api/v2
        backend:
          service:
            name: sample-golang
            port:
              number: 8080
